--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,18 +17,18 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1  # Replace with your AWS region
+          aws-region: ap-south-1
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16  # Or your preferred Node.js version
+          node-version: 16
 
       - name: Install dependencies
         run: npm install
 
-      - name: Zip function code WITHOUT node_modules
-        run: zip -r lambda.zip .  -x ".git/*" -x "node_modules/*" # Include all files and directories, EXCLUDING  .git and node_modules
+      - name: Zip function code WITH node_modules
+        run: zip -r lambda.zip . -x ".git/*"  # Include all files and directories, INCLUDING node_modules, EXCLUDING .git
 
       - name: Update Lambda function code
-        run: aws lambda update-function-code --function-name admin-backend --zip-file fileb://lambda.zip # Replace with your Lambda function name
+        run: aws lambda update-function-code --function-name admin-backend --zip-file fileb://lambda.zip
